--- a/app/src/main/res/layout/fragment_user_information.xml
+++ b/app/src/main/res/layout/fragment_user_information.xml
@@ -22,8 +22,10 @@
         android:id="@+id/toolbar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Profile"
         android:textColor="@color/black"
+        android:textFontWeight="700"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guidelineToolbar"
@@ -44,14 +46,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineToolbar"
         app:shapeAppearanceOverlay="@style/RoundImage"
-        app:strokeWidth="2dp"
-        app:strokeColor="#C0C0C0"/>
+        app:strokeColor="#C0C0C0"
+        app:strokeWidth="2dp" />
 
     <TextView
         android:id="@+id/changePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change photo"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="@string/chsnge_photo_text"
         android:textColor="@color/grey_font"
         android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="@+id/userPhoto"
@@ -63,12 +66,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Satria Adhi Pradana"
+        android:fontFamily="@font/montserrat_bold"
+        android:textColor="#3F3F3F"
+        android:textFontWeight="700"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changePhoto" />
+        app:layout_constraintTop_toBottomOf="@+id/changePhoto"
+        tools:text="Satria Adhi Pradana" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_upload"
@@ -78,12 +83,14 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_effect_main_buttons"
         android:drawableStart="@drawable/upload_image"
+        android:fontFamily="@font/montserrat_medium"
         android:gravity="center"
         android:paddingStart="60dp"
         android:paddingEnd="60dp"
-        android:text="Upload item"
+        android:text="@string/upload_item_text"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textFontWeight="700"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,10 +127,11 @@
                 android:id="@+id/textViewTrade"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Trade store"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/trade_store_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tradeImage"
                 app:layout_constraintStart_toEndOf="@+id/tradeImage"
                 app:layout_constraintTop_toTopOf="@+id/tradeImage" />
@@ -160,10 +168,11 @@
                 android:id="@+id/textViewPayment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Payment method"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/payment_method_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/paymentImage"
                 app:layout_constraintStart_toEndOf="@+id/paymentImage"
                 app:layout_constraintTop_toTopOf="@+id/paymentImage" />
@@ -198,10 +207,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Balance"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/balance_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/balanceImage"
                 app:layout_constraintStart_toEndOf="@+id/balanceImage"
                 app:layout_constraintTop_toTopOf="@+id/balanceImage" />
@@ -211,10 +221,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
-                android:text="$1593"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/balance_count_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -239,10 +250,11 @@
                 android:id="@+id/textViewHistory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Trade history"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/trade_history_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/historyImage"
                 app:layout_constraintStart_toEndOf="@+id/historyImage"
                 app:layout_constraintTop_toTopOf="@+id/historyImage" />
@@ -279,10 +291,11 @@
                 android:id="@+id/textViewRestore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Restore purchase"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/restore_purchase_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/restoreImage"
                 app:layout_constraintStart_toEndOf="@+id/restoreImage"
                 app:layout_constraintTop_toTopOf="@+id/restoreImage" />
@@ -317,10 +330,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Help"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/help_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/helpImage"
                 app:layout_constraintStart_toEndOf="@+id/helpImage"
                 app:layout_constraintTop_toTopOf="@+id/helpImage" />
@@ -348,10 +362,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Log out"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="@string/log_out_text"
+                android:textColor="#040402"
+                android:textFontWeight="600"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageLogout"
                 app:layout_constraintStart_toEndOf="@+id/imageLogout"
                 app:layout_constraintTop_toTopOf="@+id/imageLogout" />
