--- a/app/src/main/res/layout/item_brands.xml
+++ b/app/src/main/res/layout/item_brands.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
@@ -8,8 +7,8 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:background="?android:attr/selectableItemBackground"
-    app:cardElevation="0dp"
     app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
     app:layout_constraintWidth_percent="0.5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,21 +19,23 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:background="@color/teal_200"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:background="@color/teal_200" />
 
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/nameTextView"
-            android:layout_width="74dp"
-            android:layout_height="26dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Brand name"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/white"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Brand name" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
