--- a/app/src/main/res/layout/color_list_item.xml
+++ b/app/src/main/res/layout/color_list_item.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingEnd="8dp"
-    android:layout_width="58dp"
-    android:layout_height="38dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="48dp"
+    android:layout_height="34dp"
+    android:paddingEnd="8dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:visibility="invisible"
-        app:cardBackgroundColor="#ADADAD"
         android:id="@+id/color_container"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <com.google.android.material.card.MaterialCardView
-        app:cardElevation="0dp"
-        android:id="@+id/color"
-        app:cardCornerRadius="8dp"
-        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:cardBackgroundColor="@color/black"/>
+        android:visibility="invisible"
+        app:cardBackgroundColor="@color/grey_stroke"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/color"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
+        tools:cardBackgroundColor="@color/black" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
