--- a/app/src/main/res/layout/item_flash_sale.xml
+++ b/app/src/main/res/layout/item_flash_sale.xml
@@ -40,6 +40,7 @@
             android:layout_height="18dp"
             android:layout_margin="8dp"
             android:background="@drawable/sales_background"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
@@ -56,6 +57,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
             android:background="@drawable/type_background"
+            android:ellipsize="end"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -67,10 +70,11 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/nameTextView"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -84,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="18dp"
+            android:fontFamily="@font/poppins_regular"
             android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="10sp"
