--- a/app/src/main/res/layout/item_latest.xml
+++ b/app/src/main/res/layout/item_latest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
@@ -8,8 +7,8 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:background="?android:attr/selectableItemBackground"
-    app:cardElevation="0dp"
     app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
     app:layout_constraintWidth_percent="0.5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,8 +19,8 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:background="@color/teal_200"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:background="@color/teal_200" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/categoryTextView"
@@ -30,6 +29,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
             android:background="@drawable/type_background"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/black"
@@ -37,20 +37,21 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/nameTextView"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="Phones" />
+            tools:text="Phones" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/nameTextView"
-            android:layout_width="74dp"
-            android:layout_height="26dp"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/priceTextView"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="Samsung S10" />
+            tools:text="Samsung S10" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/priceTextView"
@@ -58,13 +59,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
+            android:fontFamily="@font/poppins_regular"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:textSize="6sp"
+            android:textSize="8sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="2000" />
+            tools:text="$2000" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/addButton"
